Add home screen to game screens functionality

--- a/style.css
+++ b/style.css
@@ -17,13 +17,19 @@ main,
 .computer {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
   text-align: center;
 }
 
 .human,
 .computer {
   width: 12.5vw;
+}
+.human {
+  margin-right: 5vw;
+}
+
+.computer {
+  margin-left: 5vw;
 }
 
 .player-heading {
@@ -57,4 +63,14 @@ ul,
 li {
   list-style: none;
   padding: 5px;
+}
+
+.game-fighter {
+  width: 16vw;
+}
+
+.hidden {
+  display: none;
+  width: 0;
+  height: 0;
 }
