--- a/style.css
+++ b/style.css
@@ -13,22 +13,22 @@
 }
 
 main,
-.human,
-.computer {
+.player-section-one,
+.player-section-two {
   display: flex;
   flex-direction: column;
   text-align: center;
 }
 
-.human,
-.computer {
+.player-section-one,
+.player-section-two {
   width: 12.5vw;
 }
-.human {
+.player-section-one {
   margin-right: 5vw;
 }
 
-.computer {
+.player-section-two {
   margin-left: 5vw;
 }
 
@@ -37,9 +37,8 @@ main,
   margin-bottom: 5vh;
 }
 
-.human-image,
-.computer-image {
-  width: auto;
+.player-image {
+  width: 11.5vw;
   margin-bottom: 3.5vh;
 }
 
