--- a/style.css
+++ b/style.css
@@ -36,11 +36,11 @@ main {
 }
 
 .heading-info-wrapper {
+  height: 4.5vh;
   display: flex;
-}
-
-.heading-info-wrapper {
-  margin-bottom: 12vh;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5vh;
   font-size: 1.7em;
 }
 
@@ -85,6 +85,20 @@ main {
   font-size: 1.5em;
 }
 
+.switch-game {
+  padding: 7px;
+  font-size: 1em;
+  border: none;
+  background: #E9DAF8;
+  transition: all .2s ease;
+}
+
+.switch-game:hover {
+  cursor: pointer;
+  background: #FFFFFF;
+  box-shadow: 2.5px 2.5px #000;
+}
+
 .classic-button,
 .extra-button {
   width: 30%;
@@ -114,7 +128,7 @@ li {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  padding: 5vh 0 5vh 0;
+  padding: 3.5vh 0 3.5vh 0;
   border-top: solid 3px #000;
   border-bottom: solid 3px #000;
   background: #EA9AB2;
@@ -126,7 +140,7 @@ li {
 }
 
 .player-image-small {
-  width: 6vw;
+  width: 4vh;
 }
 
 .game-fighter-button:hover {
