--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #e4e3d3;
+  background-color: #518ee6;
 }
 
 .game-container {
@@ -28,11 +28,12 @@ main {
 }
 
 .game-name-heading {
-  margin: 6vh 0 2.5vh 0;
-  padding: 4px;
+  width: 100%;
+  padding: 6vh 0 2.5vh 0;
+  margin-bottom: 3vh;
   font-size: 2.5em;
-  background-color: #C39BEB;
-  box-shadow: 4px 4px #000;
+  background: linear-gradient(#518ee6, #8ea34f, #809a31);
+  box-shadow: 3px 3px 5px #373737;
 }
 
 .heading-info-wrapper {
@@ -48,7 +49,7 @@ main {
 .player-section-two {
   width: 12.5vw;
   height: 100vh;
-  background: linear-gradient(#C39BEB 60%, #E0CCF5);
+  background: #e4e3d3;
 }
 
 .player-section-one,
@@ -62,12 +63,13 @@ main {
 
 .player-section-one {
   padding-right: 3vw;
-  border-right: solid 3px #000;
+  z-index: 1;
+  box-shadow: 3px 0 5px #373737;
 }
 
 .player-section-two {
   padding-left: 3vw;
-  border-left: solid 3px #000;
+  box-shadow: -3px 0 5px #373737;
 }
 
 .player-heading,
@@ -81,27 +83,18 @@ main {
 }
 
 .win-counter {
+  width: 100%;
   margin-bottom: 2vh;
+  padding: 5px;
   font-size: 1.5em;
-}
-
-.switch-game {
-  padding: 7px;
-  font-size: 1em;
-  border: none;
-  background: #E9DAF8;
-  transition: all .2s ease;
-}
-
-.switch-game:hover {
-  cursor: pointer;
-  background: #FFFFFF;
-  box-shadow: 2.5px 2.5px #000;
+  border-radius: 5px;
+  background: #8ea34f;
 }
 
 .classic-button,
 .extra-button {
   width: 30%;
+  border-radius: 5px;
   background-color: #E582A0;
   transition: all .2s ease;
 }
@@ -110,7 +103,23 @@ main {
 .extra-button:hover {
   cursor: pointer;
   background-color: #EA9AB2;
-  box-shadow: 4px 4px #000;
+  box-shadow: 4px 4px 5px #373737;
+}
+
+.switch-game {
+  width: 100%;
+  padding: 7px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  background: #518ee6;
+  transition: all .2s ease;
+}
+
+.switch-game:hover {
+  cursor: pointer;
+  background: #a1c7ff;
+  box-shadow: 2.5px 2.5px 4px #373737;
 }
 
 ul,
@@ -129,9 +138,9 @@ li {
   justify-content: center;
   width: 100%;
   padding: 3.5vh 0 3.5vh 0;
-  border-top: solid 3px #000;
-  border-bottom: solid 3px #000;
-  background: #EA9AB2;
+  border-top: solid 3px #fff;
+  border-bottom: solid 3px #fff;
+  background: #ffb1d7;
 }
 
 .game-fighter {
