--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ main {
   width: 100%;
   padding: 6vh 0 2.5vh 0;
   margin-bottom: 3vh;
-  font-size: 2.5em;
+  font-size: 2em;
   background: #809a31;
   box-shadow: 3px 3px 5px #373737;
 }
@@ -42,7 +42,7 @@ main {
   justify-content: center;
   align-items: center;
   margin-bottom: 5vh;
-  font-size: 1.7em;
+  font-size: 1.5em;
 }
 
 .player-section-one,
@@ -54,7 +54,7 @@ main {
 }
 
 .player-heading {
-  font-size: 2em;
+  font-size: 1.5em;
 }
 
 .player-section-one {
@@ -87,9 +87,16 @@ main {
   background: #8ea34f;
 }
 
+.win-counter-update {
+  font-size: 1.5em;
+  color: #CB295D;
+  transition: all .1s ease-out;
+}
+
 .classic-button,
 .extra-button {
-  width: 30%;
+  width: 37%;
+  font-weight: lighter;
   border-radius: 5px;
   background-color: #E582A0;
   transition: all .2s ease;
@@ -100,6 +107,10 @@ main {
   cursor: pointer;
   background-color: #EA9AB2;
   box-shadow: 4px 4px 5px #373737;
+}
+
+.game-option-heading {
+  font-size: 1em;
 }
 
 .switch-game {
@@ -155,7 +166,7 @@ li {
   height: 0;
 }
 
-@media(max-width: 770px) {
+@media(max-width: 649px) {
   .game-container {
     flex-direction: column;
     height: 100vh;
@@ -171,9 +182,17 @@ li {
     box-shadow: none;
   }
 
+  .player-heading {
+    font-size: 1.2em;
+  }
+
   .player-heading,
   .player-image {
     margin: 0;
+  }
+
+  .player-image {
+    width: 20vw;
   }
 
   .win-counter {
@@ -185,9 +204,9 @@ li {
   }
 
   .switch-game {
-    width: 100vw;
-    border-radius: 0;
+    width: auto;
     background: #E582A0;
+    box-shadow: 2.5px 2.5px 4px #373737;
   }
 
   .switch-game:hover {
@@ -208,8 +227,38 @@ li {
     box-shadow: none;
   }
 
+  .game-name-heading,
+  .game-option-heading {
+    font-size: 1.2em;
+  }
+
+  .heading-info {
+    font-size: .7em;
+  }
+
   .classic-button,
   .extra-button {
-    width: 50%;
+    width: 60%;
+    box-shadow: 4px 4px 5px #373737;
+  }
+
+  .classic-button {
+    margin-bottom: 8vh;
+  }
+
+  .game-fighter-button{
+    padding: 0 3vw 0 3vw;
+  }
+}
+
+@media(max-width: 900px) and (min-width: 650px) {
+  .classic-button,
+  .extra-button {
+    width: 60%;
+    box-shadow: 4px 4px 5px #373737;
+  }
+
+  .switch-game {
+    box-shadow: 2.5px 2.5px 4px #373737;
   }
 }
