--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@
   padding: 0;
   font-family: 'Open Sans', sans-serif;
 }
-
+/* #518ee6 */
 body {
-  background-color: #518ee6;
+  background: url(assets/clouds.jpg);
+  background-size: cover;
+
 }
 
 .game-container {
@@ -32,7 +34,7 @@ main {
   padding: 6vh 0 2.5vh 0;
   margin-bottom: 3vh;
   font-size: 2em;
-  background: #809a31;
+  background: #0299c3;
   box-shadow: 3px 3px 5px #373737;
 }
 
@@ -50,7 +52,7 @@ main {
   width: 12.5vw;
   height: 100vh;
   padding: 6vh 3vw 0 3vw;
-  background: #e4e3d3;
+  background: #E9FAFF;
 }
 
 .player-heading {
@@ -84,28 +86,30 @@ main {
   padding: 5px;
   font-size: 1.2em;
   border-radius: 5px;
-  background: #8ea34f;
+  background: #39D3FD;
 }
 
 .win-counter-update {
   font-size: 1.5em;
-  color: #CB295D;
+  color: #DF1933;
   transition: all .1s ease-out;
 }
 
 .classic-button,
 .extra-button {
-  width: 37%;
+  width: 300px;
+  padding: 1vh 0 1vh 0;
   font-weight: lighter;
   border-radius: 5px;
-  background-color: #E582A0;
+  background-color: #EF6D7E;
   transition: all .2s ease;
 }
 
 .classic-button:hover,
 .extra-button:hover {
   cursor: pointer;
-  background-color: #EA9AB2;
+  background-color: #F6ABB5;
+  border: solid 2px #000;
   box-shadow: 4px 4px 5px #373737;
 }
 
@@ -119,13 +123,14 @@ main {
   font-size: 1em;
   border: none;
   border-radius: 5px;
-  background: #518ee6;
+  background: #EF6D7E;
   transition: all .2s ease;
 }
 
 .switch-game:hover {
   cursor: pointer;
-  background: #a1c7ff;
+  background: #F6ABB5;
+  border: solid 1.5px #000;
   box-shadow: 2.5px 2.5px 4px #373737;
 }
 
@@ -144,7 +149,7 @@ li {
   justify-content: center;
   width: 100%;
   padding: 3.5vh 0 3.5vh 0;
-  background: #ffb1d7;
+  background: #F6ABB5;
 }
 
 .game-fighter {
@@ -178,7 +183,6 @@ li {
     width: 100vw;
     height: auto;
     padding: 0;
-    background: #e4e3d3;
     box-shadow: none;
   }
 
@@ -205,12 +209,7 @@ li {
 
   .switch-game {
     width: auto;
-    background: #E582A0;
     box-shadow: 2.5px 2.5px 4px #373737;
-  }
-
-  .switch-game:hover {
-    background: #EA9AB2;
   }
 
   main {
