--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ main {
 }
 
 .player-heading {
+  margin-bottom: 6vh;
   font-size: 1.5em;
 }
 
@@ -68,11 +69,6 @@ main {
 .player-section-two {
   padding-left: 3vw;
   box-shadow: -3px 0 5px #373737;
-}
-
-.player-heading,
-.classic-button {
-  margin-bottom: 5vh;
 }
 
 .player-image {
@@ -97,6 +93,7 @@ main {
 
 .classic-button,
 .extra-button {
+  margin-bottom: 6vh;
   width: 300px;
   padding: 1vh 0 1vh 0;
   font-weight: lighter;
@@ -117,8 +114,8 @@ main {
   font-size: 1em;
 }
 
-.switch-game {
-  width: 100%;
+.switch-game,
+.clear-wins {
   padding: 7px;
   font-size: 1em;
   border: none;
@@ -127,7 +124,8 @@ main {
   transition: all .2s ease;
 }
 
-.switch-game:hover {
+.switch-game:hover,
+.clear-wins:hover {
   cursor: pointer;
   background: #F6ABB5;
   border: solid 1.5px #000;
@@ -207,8 +205,8 @@ li {
     background: #fff;
   }
 
-  .switch-game {
-    width: auto;
+  .switch-game,
+  .clear-wins {
     box-shadow: 2.5px 2.5px 4px #373737;
   }
 
@@ -226,9 +224,12 @@ li {
     box-shadow: none;
   }
 
-  .game-name-heading,
+  .game-name-heading {
+    font-size: 1.3em;
+  }
+
   .game-option-heading {
-    font-size: 1.2em;
+    font-size: 1em;
   }
 
   .game-option-heading {
@@ -237,20 +238,18 @@ li {
 
   .heading-info-wrapper {
     margin-bottom: 1vh;
-  }
-
-  .heading-info {
-    font-size: .7em;
+    font-size: 1.05em;
   }
 
   .classic-button,
   .extra-button {
     width: 60%;
+    margin-bottom: 3vh;
     box-shadow: 4px 4px 5px #373737;
   }
 
-  .classic-button {
-    margin-bottom: 8vh;
+  ul {
+    font-size: 10pt;
   }
 
   .game-fighter-button{
@@ -262,10 +261,12 @@ li {
   .classic-button,
   .extra-button {
     width: 60%;
+    margin-bottom: 3vh;
     box-shadow: 4px 4px 5px #373737;
   }
 
-  .switch-game {
+  .switch-game,
+  .clear-wins {
     box-shadow: 2.5px 2.5px 4px #373737;
   }
 }
