--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 *::after {
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto Mono', monospace;
 }
 /* #518ee6 */
 body {
@@ -34,9 +34,8 @@ main {
   padding: 3vh 0 3vh 0;
   margin-bottom: 3vh;
   font-size: 3.5em;
-  color: #E9FAFF;
-  background: #0299c3;
-  box-shadow: 3px 3px 5px #373737;
+  color: #FFF;
+  background: #000;
 }
 
 .heading-info-wrapper {
@@ -53,7 +52,7 @@ main {
   width: 12.5vw;
   height: 100vh;
   padding: 6vh 3vw 0 3vw;
-  background: #E9FAFF;
+  background: #FFF;
 }
 
 .player-heading {
@@ -83,12 +82,12 @@ main {
   padding: 5px;
   font-size: 1.2em;
   border-radius: 5px;
-  background: #39D3FD;
+  background: #0299c3;
 }
 
 .win-counter-update {
   font-size: 1.5em;
-  color: #DF1933;
+  color: #FFF;
   transition: all .07s ease-out;
 }
 
@@ -99,19 +98,25 @@ main {
   padding: 1vh 0 1vh 0;
   font-weight: lighter;
   border-radius: 5px;
-  background-color: #EF6D7E;
+  color: #FFF;
+  background-color: #000;
   transition: all .2s ease;
 }
 
 .classic-button:hover,
 .extra-button:hover {
   cursor: pointer;
-  background-color: #F6ABB5;
+  color: #000;
+  background-color: #FFF;
   box-shadow: 4px 4px 5px #373737;
 }
 
 .game-option-heading {
   font-size: 1em;
+}
+
+.switch-game {
+  margin-bottom: 1vh;
 }
 
 .switch-game,
@@ -120,14 +125,14 @@ main {
   font-size: 1em;
   border: none;
   border-radius: 5px;
-  background: #EF6D7E;
+  background: #AFFC41;
   transition: all .2s ease;
 }
 
 .switch-game:hover,
 .clear-wins:hover {
   cursor: pointer;
-  background: #F6ABB5;
+  background: #b2ff9e;
   box-shadow: 2.5px 2.5px 4px #373737;
 }
 
@@ -146,12 +151,18 @@ li {
   justify-content: center;
   width: 100%;
   padding: 3.5vh 0 3.5vh 0;
-  background: #F6ABB5;
+  background: #000;
 }
 
 .game-fighter {
   width: 20%;
-  margin: 0 2vw 0 2vw;
+  margin: 0 2vw 1.5vh 2vw;
+  border-radius: 20px;
+  background: #AFFC41;
+}
+
+.game-fighter-button:hover {
+  background-color: #b2ff9e;
 }
 
 .player-image-small {
@@ -256,12 +267,30 @@ li {
   }
 }
 
-@media(max-width: 900px) and (min-width: 650px) {
+@media(max-width: 1000px) and (min-width: 650px) {
+  .game-name-heading {
+    font-size: 1.5em;
+  }
+
+  .heading-info-wrapper {
+    margin-bottom: 1vh;
+    font-size: 1.05em;
+  }
+
+  .player-section-one,
+  .player-section-two {
+    width: 20vw;
+  }
+
   .classic-button,
   .extra-button {
     width: 60%;
     margin-bottom: 3vh;
     box-shadow: 4px 4px 5px #373737;
+  }
+
+  ul {
+    font-size: 10pt;
   }
 
   .switch-game,
