--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ li {
     padding: 0;
     margin-bottom: 0;
     border-radius: 0;
-    background: #fff;
+    background-color: #0299c3;
   }
 
   .switch-game,
