--- a/style.css
+++ b/style.css
@@ -5,296 +5,46 @@
   padding: 0;
   font-family: 'Roboto Mono', monospace;
 }
-/* #518ee6 */
-body {
-  background: url(assets/clouds.jpg);
-  background-size: cover;
 
+.game-wrapper,
+.player-section,
+.game-play-wrapper,
+.fighters-wrapper,
+.fighters-wrapper {
+  display: flex;
 }
 
-.game-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-main,
-.player-section-one,
-.player-section-two {
-  display: flex;
+.player-section,
+.game-play-wrapper {
   flex-direction: column;
-  align-items: center;
-  text-align: center;
 }
-main {
+
+.fighters-wrapper {
+  flex-wrap: wrap;
+}
+
+.game-play-wrapper {
   width: 75vw;
 }
 
-.game-name-heading {
-  width: 100%;
-  padding: 3vh 0 3vh 0;
-  margin-bottom: 3vh;
-  font-size: 3.5em;
-  color: #FFF;
-  background: #000;
+.player-section {
+  width: 25vw;
 }
 
-.heading-info-wrapper {
-  height: 4.5vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 5vh;
-  font-size: 1.5em;
-}
-
-.player-section-one,
-.player-section-two {
-  width: 12.5vw;
-  height: 100vh;
-  padding: 6vh 3vw 0 3vw;
-  background: #FFF;
-}
-
-.player-heading {
-  margin-bottom: 6vh;
-  font-size: 1.5em;
-}
-
-.player-section-one {
-  padding-right: 3vw;
-  z-index: 1;
-  box-shadow: 3px 0 5px #373737;
-}
-
-.player-section-two {
-  padding-left: 3vw;
-  box-shadow: -3px 0 5px #373737;
-}
-
-.player-image {
-  width: 11.5vw;
-  margin-bottom: 3.5vh;
-}
-
-.win-counter {
-  width: 100%;
-  margin-bottom: 2vh;
-  padding: 5px;
-  font-size: 1.2em;
-  border-radius: 5px;
-  background: #0299c3;
-}
-
-.win-counter-update {
-  font-size: 1.5em;
-  color: #FFF;
-  transition: all .07s ease-out;
-}
-
-.classic-button,
-.extra-button {
-  margin-bottom: 6vh;
-  width: 300px;
-  padding: 1vh 0 1vh 0;
-  font-weight: lighter;
-  border-radius: 5px;
-  color: #FFF;
-  background-color: #000;
-  transition: all .2s ease;
-}
-
-.classic-button:hover,
-.extra-button:hover {
-  cursor: pointer;
-  color: #000;
-  background-color: #FFF;
-  box-shadow: 4px 4px 5px #373737;
-}
-
-.game-option-heading {
-  font-size: 1em;
-}
-
-.switch-game {
-  margin-bottom: 1vh;
-}
-
-.switch-game,
-.clear-wins {
-  padding: 7px;
-  font-size: 1em;
-  border: none;
-  border-radius: 5px;
-  background: #AFFC41;
-  transition: all .2s ease;
-}
-
-.switch-game:hover,
-.clear-wins:hover {
-  cursor: pointer;
-  background: #b2ff9e;
-  box-shadow: 2.5px 2.5px 4px #373737;
-}
-
-ul,
-.game-option-heading {
-  padding: .5vh;
-}
-
-li {
+.rules {
   list-style: none;
 }
 
-.gameplay {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.fighter-wrapper{
+  flex-direction: column;
+  width: 30%;
+}
+.fighter {
   width: 100%;
-  padding: 3.5vh 0 3.5vh 0;
-  background: #000;
-}
-
-.game-fighter {
-  width: 20%;
-  margin: 0 2vw 1.5vh 2vw;
-  border-radius: 20px;
-  background: #AFFC41;
-}
-
-.game-fighter-button:hover {
-  background-color: #b2ff9e;
-}
-
-.player-image-small {
-  width: 4vh;
-}
-
-.game-fighter-button:hover {
-  cursor: pointer;
 }
 
 .hidden {
   display: none;
   width: 0;
   height: 0;
-}
-
-@media(max-width: 649px) {
-  .game-container {
-    flex-direction: column;
-    height: 100vh;
-  }
-
-  .player-section-one,
-  .player-section-two {
-    display: flex;
-    width: 100vw;
-    height: auto;
-    padding: 0;
-    box-shadow: none;
-  }
-
-  .player-heading {
-    font-size: 1.2em;
-  }
-
-  .player-heading,
-  .player-image {
-    margin: 0;
-  }
-
-  .player-image {
-    width: 20vw;
-  }
-
-  .win-counter {
-    width: 100%;
-    padding: 0;
-    margin-bottom: 0;
-    border-radius: 0;
-    background-color: #0299c3;
-  }
-
-  .switch-game,
-  .clear-wins {
-    box-shadow: 2.5px 2.5px 4px #373737;
-  }
-
-  main {
-    display: flex;
-    height: 75vh;
-    justify-content: flex-start;
-  }
-
-  main,
-  .game-name-heading {
-    width: 100vw;
-    margin-bottom: 1vh;
-    padding: 0;
-    box-shadow: none;
-  }
-
-  .game-name-heading {
-    font-size: 1.3em;
-  }
-
-  .game-option-heading {
-    font-size: 1em;
-  }
-
-  .game-option-heading {
-    margin-bottom: 1vh;
-  }
-
-  .heading-info-wrapper {
-    margin-bottom: 1vh;
-    font-size: 1.05em;
-  }
-
-  .classic-button,
-  .extra-button {
-    width: 60%;
-    margin-bottom: 3vh;
-    box-shadow: 4px 4px 5px #373737;
-  }
-
-  ul {
-    font-size: 10pt;
-  }
-
-  .game-fighter-button{
-    padding: 0 3vw 0 3vw;
-  }
-}
-
-@media(max-width: 1000px) and (min-width: 650px) {
-  .game-name-heading {
-    font-size: 1.5em;
-  }
-
-  .heading-info-wrapper {
-    margin-bottom: 1vh;
-    font-size: 1.05em;
-  }
-
-  .player-section-one,
-  .player-section-two {
-    width: 20vw;
-  }
-
-  .classic-button,
-  .extra-button {
-    width: 60%;
-    margin-bottom: 3vh;
-    box-shadow: 4px 4px 5px #373737;
-  }
-
-  ul {
-    font-size: 10pt;
-  }
-
-  .switch-game,
-  .clear-wins {
-    box-shadow: 2.5px 2.5px 4px #373737;
-  }
 }
