--- a/style.css
+++ b/style.css
@@ -156,27 +156,32 @@
 @media(max-width: 649px) {
   .game-wrapper {
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: space-around;
   }
   
+  .game-play-wrapper {
+    justify-content: center;
+    height: 70vh;
+  }
+
   .game-title {
     margin: 0;
-    font-size: 1.5em;
+    font-size: 1em;
   }
 
   .game-info {
-    font-size: 1em;
+    font-size: .8em;
   }
 
   .player-section {
     width: 100%;
-    height: 20vh;
+    height: 15vh;
     flex-direction: row;
   }
 
   .player-token {
-    width: 15vh;
+    width: 10vh;
     margin-left: 1vh;
   }
 
@@ -208,6 +213,13 @@
     font-size: 1em;
   }
 
+  .wins {
+    font-size: 1em;
+  }
+
+  .highlight {
+    font-size: 1.2em;
+  }
 
   .fighter {
     width: 50%;
