--- a/style.css
+++ b/style.css
@@ -161,8 +161,9 @@
   }
   
   .game-play-wrapper {
+    width: 100vw;
     justify-content: center;
-    height: 70vh;
+    height: 60vh;
   }
 
   .game-title {
@@ -176,13 +177,13 @@
 
   .player-section {
     width: 100%;
-    height: 15vh;
+    height: 20vh;
     flex-direction: row;
   }
 
   .player-token {
     width: 10vh;
-    margin-left: 1vh;
+    margin: 0 0;
   }
 
   .wins {
@@ -204,6 +205,9 @@
 }
 
 @media(max-width: 1000px) and (min-width: 650px) {
+  .game-wrapper {
+    width: 100vw;
+  }
 
   .player-section {
     width: 15vw;
